10_infrastructure/configs/ingress/envoy_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: ingress
    namespace: ingress
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ingress
  namespace: ingress
  annotations:
    external-dns.kubernetes.io/target: ${vals_info_cluster_publicHost}
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway.networking.k8s.io/public-routes: "true"
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: envoy-gateway-tls
          - group: ""
            kind: Secret
            name: envoy-gateway-mapper-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway.networking.k8s.io/public-routes: "true"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  namespace: ingress
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingress
      sectionName: http
  hostnames:
    - "${vals_info_cluster_domain}"
    - "auth.${vals_info_cluster_domain}"
    - "books.${vals_info_cluster_domain}"
    - "grafana.${vals_info_cluster_domain}"
    - "mail.${vals_info_cluster_domain}"
    - "webmail.${vals_info_cluster_domain}"
    - "paperless.${vals_info_cluster_domain}"
    - "photos.${vals_info_cluster_domain}"
    - "mapper.${secrets_apps_mapper_mapper_domain}"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 308
